[package]
name = "cheval"
version = "0.2.0"
edition = "2018"
description = "An arch linux mirrorlist generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
celes = "2.0.4"
chrono = { version = "0.4.22", features = ["serde"] }
rayon = "1.5.3"
reqwest = { version = "0.11.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
structopt = "0.3.26"
xdglib = { version = "0.1.0", git = "https://github.com/Shemnei/xdglib" }
