[package]
name = "cheval"
version = "0.2.1"
edition = "2021"
description = "An arch linux mirrorlist generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
celes = "2.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.11", features = ["derive"] }
rayon = "1.7.0"
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
xdglib = { version = "0.1.0", git = "https://github.com/Shemnei/xdglib" }
